--- a/administration/monitoring/icinga-installer/setup.in
+++ b/administration/monitoring/icinga-installer/setup.in
@@ -112,6 +112,7 @@ f_HostInstall(){
 
     echo "Deploying configurations"
     f_DeployConfigs
+    find ${DESTDIR}/etc/ -type f -exec chmod 644 {} \; || exit 1
 
     echo "Installation finished"
 
@@ -147,12 +148,17 @@ f_ClientInstall(){
 
             echo "Deploying configuration."
             f_DeployNRPEConfigs
+            find ${DESTDIR}/etc/ -type f -exec chmod 640 {} \; || exit 1
+
             echo "Installing required software packages"
             f_InstallRuntimeRequirements
+            echo "Setup service startup"
+            update-rc.d nrped defaults
+            service nrped restart
             return 0
         fi
     done
-    echo "No binaries for your architecture available, compile yourselfe and deploy." >&2
+    echo "No binaries for your architecture available, compile yourself and deploy." >&2
     exit 1
     #}}}
 }
@@ -294,7 +300,7 @@ f_AddSystemUser(){
     if ! egrep -e "^${SYSTEM_USER}:.*$" /etc/passwd >/dev/null; then
         echo "Create new system-user: ${SYSTEM_USER}"
         f_NeedRoot
-        useradd -n ${BASEDIR} -M --system ${SYSTEM_USER}
+        useradd -M --system ${SYSTEM_USER}
         if [ $? -ne 0 ]; then
             echo "Error during user creation." >&2;
             exit 1;
@@ -316,7 +322,7 @@ f_NeedRoot(){
 f_InstallCompilationRequirements(){
     #{{{
     f_NeedRoot
-    aptitude update && aptitude install \
+    aptitude update && aptitude --without-recommends -y install \
         build-essential \
         libgd2-xpm-dev \
         libjpeg-dev \
@@ -340,7 +346,7 @@ f_InstallCompilationRequirements(){
 f_InstallIcingaRequirements(){
     #{{{
     f_NeedRoot
-    aptitude update && aptitude install \
+    aptitude update && aptitude --without-recommends -y install \
         openssl \
         snmp \
         mysql-server \
@@ -357,7 +363,7 @@ f_InstallIcingaRequirements(){
 f_InstallRuntimeRequirements(){
     #{{{
     f_NeedRoot
-    aptitude update && aptitude install \
+    aptitude update && aptitude --without-recommends -y install \
         openssl \
         snmp \
         smartmontools
