--- a/administration/monitoring/icinga-installer/setup.in
+++ b/administration/monitoring/icinga-installer/setup.in
@@ -167,9 +167,11 @@ f_ClientInstall(){
                 install -g ${SUDO_GROUP} -o ${SYSTEM_USER} -m 750 ${src_bin}/${d}/${src_file} ${DESTDIR}/${d}/${src_file}
             done
             # setup special files
-
             chown root.${SUDO_GROUP} ${DESTDIR}/libexec/check_ide_smart || exit 1
             chmod u+rwxs ${DESTDIR}/libexec/check_ide_smart || exit 1
+            
+            # setup contrib files
+            find ${STARTDIR}/contrib/build/ -not -empty -type f -exec {} ${DESTDIR}/libexec/ || exit 1 ;
 
 
             # setup owner rights
@@ -250,6 +252,7 @@ f_DeployNRPEConfigs(){
 }
 
 f_DB_Check(){
+    #{{{
     # test database existance
     # TODO: check command doesn't work: -e param of mysql complains
     # TODO: return value handling
@@ -263,6 +266,7 @@ f_DB_Check(){
         fi
     done
     return "1";
+    #}}}
 }
 
 f_Install_IcingaDatabase(){
